// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultSearchControl desktop renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 makeStyles-firstRow-1 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
    >
      <div>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-372"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-135 makeStyles-checkbox-2"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-372"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Hide dust
            </p>
          </span>
        </label>
      </div>
      <div>
        <div
          aria-label="apy apr selector"
          class="MuiButtonGroup-root-204"
          role="group"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-outlined-233 MuiButtonGroup-grouped-210 MuiButtonGroup-groupedHorizontal-211 MuiButtonGroup-groupedOutlined-218 MuiButtonGroup-groupedOutlinedHorizontal-219 MuiButtonGroup-groupedOutlined-218 makeStyles-selected-202 makeStyles-button-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-229"
            >
              APY
            </span>
            <span
              class="MuiTouchRipple-root-372"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-outlined-233 MuiButtonGroup-grouped-210 MuiButtonGroup-groupedHorizontal-211 MuiButtonGroup-groupedOutlined-218 MuiButtonGroup-groupedOutlinedHorizontal-219 MuiButtonGroup-groupedOutlined-218 makeStyles-button-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-229"
            >
              APR
            </span>
            <span
              class="MuiTouchRipple-root-372"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-32 makeStyles-root-257 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-260 makeStyles-formControl-258"
        >
          <label
            class="MuiFormLabel-root-276 MuiInputLabel-root-264 MuiInputLabel-formControl-270 MuiInputLabel-animated-273 MuiInputLabel-outlined-275"
            data-shrink="false"
            id="status-selector-id-label"
          >
            Status
          </label>
          <div
            class="MuiInputBase-root-310 MuiOutlinedInput-root-295 MuiInputBase-formControl-311"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="status-selector-id-label status-selector"
              class="MuiSelect-root-284 MuiSelect-select-285 MuiSelect-selectMenu-288 MuiSelect-outlined-287 MuiInputBase-input-321 MuiOutlinedInput-input-305"
              id="status-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-294"
              data-testid="status-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-290 MuiSelect-iconOutlined-293"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-332 MuiOutlinedInput-notchedOutline-304"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-334"
              >
                <span>
                  Status
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-260 makeStyles-formControl-336"
        >
          <label
            class="MuiFormLabel-root-276 MuiInputLabel-root-264 MuiInputLabel-formControl-270 MuiInputLabel-animated-273 MuiInputLabel-outlined-275"
            data-shrink="false"
            id="platform-selector-id-label"
          >
            Platform
          </label>
          <div
            class="MuiInputBase-root-310 MuiOutlinedInput-root-295 MuiInputBase-formControl-311"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="platform-selector-id-label platform-selector"
              class="MuiSelect-root-284 MuiSelect-select-285 MuiSelect-selectMenu-288 MuiSelect-outlined-287 MuiInputBase-input-321 MuiOutlinedInput-input-305"
              id="platform-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-294"
              data-testid="platform-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-290 MuiSelect-iconOutlined-293"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-332 MuiOutlinedInput-notchedOutline-304"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-334"
              >
                <span>
                  Platform
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <div
          class="MuiFormControl-root-260 makeStyles-formControl-338"
        >
          <label
            class="MuiFormLabel-root-276 MuiInputLabel-root-264 MuiInputLabel-formControl-270 MuiInputLabel-animated-273 MuiInputLabel-outlined-275"
            data-shrink="false"
            id="rewards-selector-id-label"
          >
            Rewards
          </label>
          <div
            class="MuiInputBase-root-310 MuiOutlinedInput-root-295 MuiInputBase-formControl-311"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="rewards-selector-id-label rewards-selector"
              class="MuiSelect-root-284 MuiSelect-select-285 MuiSelect-selectMenu-288 MuiSelect-outlined-287 MuiInputBase-input-321 MuiOutlinedInput-input-305"
              id="rewards-selector"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-294"
              data-testid="rewards-selector-input"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163 MuiSelect-icon-290 MuiSelect-iconOutlined-293"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-332 MuiOutlinedInput-notchedOutline-304"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-334"
              >
                <span>
                  Rewards
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66 MuiGrid-grid-md-true-94 MuiGrid-grid-lg-6-114"
      >
        <div
          class="MuiFormControl-root-260 MuiTextField-root-342 makeStyles-root-340"
        >
          <div
            class="MuiInputBase-root-310 MuiOutlinedInput-root-295 MuiInputBase-formControl-311 MuiInputBase-adornedEnd-315 MuiOutlinedInput-adornedEnd-300"
          >
            <input
              aria-invalid="false"
              aria-label="Vault Search"
              class="MuiInputBase-input-321 MuiOutlinedInput-input-305 MuiInputBase-inputAdornedEnd-326 MuiOutlinedInput-inputAdornedEnd-309"
              placeholder="Search by vault name, token, rewards..."
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root-343 MuiInputAdornment-positionEnd-346"
            >
              <button
                aria-label="search"
                class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-341 MuiIconButton-sizeSmall-158"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-159"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-372"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-332 MuiOutlinedInput-notchedOutline-304"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-333"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-auto-65"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-text-230 MuiButton-textPrimary-231 MuiButton-fullWidth-251"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-229"
          >
            CLEAR ALL
          </span>
          <span
            class="MuiTouchRipple-root-372"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultSearchControl mobile opens filter dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-container-33"
      >
        <div
          class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
        >
          <label
            class="MuiFormControlLabel-root-135"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <input
                  class="PrivateSwitchBase-input-150"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-374"
              />
            </span>
            <span
              class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
        >
          <button
            class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-text-230 makeStyles-button-372"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-229 makeStyles-buttonLabel-373"
            >
              <p
                class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialog-root-357"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-384"
      style="opacity: 1;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-360 MuiDialog-scrollPaper-358"
      role="none presentation"
      style="opacity: 1;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-4 MuiDialog-paper-361 MuiDialog-paperScrollPaper-362 MuiDialog-paperWidthXl-369 MuiDialog-paperFullWidth-370 MuiPaper-elevation24-31 MuiPaper-rounded-5"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-386 makeStyles-title-350"
        >
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-align-items-xs-center-41 MuiGrid-justify-content-xs-space-between-52"
          >
            <h5
              class="MuiTypography-root-172 MuiTypography-h5-181 MuiTypography-displayInline-200"
            >
              Filter & Search
            </h5>
            <button
              aria-label="close vault filters"
              class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-closeButton-352"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-159"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-163"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-374"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-387 makeStyles-content-351"
        >
          <hr
            class="MuiDivider-root-389 makeStyles-topDivider-355"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-374"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Only show deposits
                  </p>
                </span>
              </label>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <label
                class="MuiFormControlLabel-root-135"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
                >
                  <span
                    class="MuiIconButton-label-159"
                  >
                    <input
                      class="PrivateSwitchBase-input-150"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-163"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-374"
                  />
                </span>
                <span
                  class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
                >
                  <p
                    class="MuiTypography-root-172 MuiTypography-body2-173"
                  >
                    Hide dust
                  </p>
                </span>
              </label>
            </div>
          </div>
          <hr
            class="MuiDivider-root-389 makeStyles-divider-354"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-direction-xs-column-36"
          >
            <div
              class="MuiGrid-root-32 makeStyles-select-353 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-398 makeStyles-formControl-396"
              >
                <label
                  class="MuiFormLabel-root-414 MuiInputLabel-root-402 MuiInputLabel-formControl-408 MuiInputLabel-animated-411 MuiInputLabel-shrink-410 MuiInputLabel-outlined-413 MuiFormLabel-filled-419"
                  data-shrink="true"
                  id="status-selector-id-label"
                >
                  Status
                </label>
                <div
                  class="MuiInputBase-root-448 MuiOutlinedInput-root-433 MuiInputBase-formControl-449"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="status-selector-id-label status-selector"
                    class="MuiSelect-root-422 MuiSelect-select-423 MuiSelect-selectMenu-426 MuiSelect-outlined-425 MuiInputBase-input-459 MuiOutlinedInput-input-443"
                    id="status-selector"
                    role="button"
                    tabindex="0"
                  >
                    guarded,  experimental
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-432"
                    data-testid="status-selector-input"
                    tabindex="-1"
                    value="guarded,experimental"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-428 MuiSelect-iconOutlined-431"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-470 MuiOutlinedInput-notchedOutline-442"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-472 PrivateNotchedOutline-legendNotched-473"
                    >
                      <span>
                        Status
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-353 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-398 makeStyles-formControl-474"
              >
                <label
                  class="MuiFormLabel-root-414 MuiInputLabel-root-402 MuiInputLabel-formControl-408 MuiInputLabel-animated-411 MuiInputLabel-outlined-413"
                  data-shrink="false"
                  id="platform-selector-id-label"
                >
                  Platform
                </label>
                <div
                  class="MuiInputBase-root-448 MuiOutlinedInput-root-433 MuiInputBase-formControl-449"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="platform-selector-id-label platform-selector"
                    class="MuiSelect-root-422 MuiSelect-select-423 MuiSelect-selectMenu-426 MuiSelect-outlined-425 MuiInputBase-input-459 MuiOutlinedInput-input-443"
                    id="platform-selector"
                    role="button"
                    tabindex="0"
                  >
                    <span>
                      ​
                    </span>
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-432"
                    data-testid="platform-selector-input"
                    tabindex="-1"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-428 MuiSelect-iconOutlined-431"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-470 MuiOutlinedInput-notchedOutline-442"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-472"
                    >
                      <span>
                        Platform
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 makeStyles-select-353 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-398 makeStyles-formControl-476"
              >
                <label
                  class="MuiFormLabel-root-414 MuiInputLabel-root-402 MuiInputLabel-formControl-408 MuiInputLabel-animated-411 MuiInputLabel-shrink-410 MuiInputLabel-outlined-413 MuiFormLabel-filled-419"
                  data-shrink="true"
                  id="rewards-selector-id-label"
                >
                  Rewards
                </label>
                <div
                  class="MuiInputBase-root-448 MuiOutlinedInput-root-433 MuiInputBase-formControl-449"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="rewards-selector-id-label rewards-selector"
                    class="MuiSelect-root-422 MuiSelect-select-423 MuiSelect-selectMenu-426 MuiSelect-outlined-425 MuiInputBase-input-459 MuiOutlinedInput-input-443"
                    id="rewards-selector"
                    role="button"
                    tabindex="0"
                  >
                    DCA,  Compounder
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput-432"
                    data-testid="rewards-selector-input"
                    tabindex="-1"
                    value="DCA,Compounder"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-163 MuiSelect-icon-428 MuiSelect-iconOutlined-431"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-470 MuiOutlinedInput-notchedOutline-442"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-472 PrivateNotchedOutline-legendNotched-473"
                    >
                      <span>
                        Rewards
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <div
                class="MuiFormControl-root-398 MuiTextField-root-480 makeStyles-root-478"
              >
                <div
                  class="MuiInputBase-root-448 MuiOutlinedInput-root-433 MuiInputBase-formControl-449 MuiInputBase-adornedEnd-453 MuiOutlinedInput-adornedEnd-438"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Vault Search"
                    class="MuiInputBase-input-459 MuiOutlinedInput-input-443 MuiInputBase-inputAdornedEnd-464 MuiOutlinedInput-inputAdornedEnd-447"
                    placeholder="Search by vault name, token, rewards..."
                    type="text"
                    value="bitcoin convex"
                  />
                  <div
                    class="MuiInputAdornment-root-481 MuiInputAdornment-positionEnd-484"
                  >
                    <button
                      aria-label="search"
                      class="MuiButtonBase-root-160 MuiIconButton-root-151 makeStyles-icon-479 MuiIconButton-sizeSmall-158"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-159"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-163"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-374"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-470 MuiOutlinedInput-notchedOutline-442"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-471"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-389 makeStyles-divider-354"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33"
          >
            <div
              class="MuiGrid-root-32 makeStyles-apr-356 MuiGrid-item-34"
            >
              <div
                aria-label="apy apr selector"
                class="MuiButtonGroup-root-490"
                role="group"
              >
                <button
                  aria-selected="false"
                  class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-outlined-233 MuiButtonGroup-grouped-496 MuiButtonGroup-groupedHorizontal-497 MuiButtonGroup-groupedOutlined-504 MuiButtonGroup-groupedOutlinedHorizontal-505 MuiButtonGroup-groupedOutlined-504 makeStyles-button-489"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-229"
                  >
                    APY
                  </span>
                  <span
                    class="MuiTouchRipple-root-374"
                  />
                </button>
                <button
                  aria-selected="true"
                  class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-outlined-233 MuiButtonGroup-grouped-496 MuiButtonGroup-groupedHorizontal-497 MuiButtonGroup-groupedOutlined-504 MuiButtonGroup-groupedOutlinedHorizontal-505 MuiButtonGroup-groupedOutlined-504 makeStyles-selected-488 makeStyles-button-489"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-229"
                  >
                    APR
                  </span>
                  <span
                    class="MuiTouchRipple-root-374"
                  />
                </button>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root-389 makeStyles-divider-354"
          />
          <div
            class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-spacing-xs-2-56 MuiGrid-justify-content-xs-flex-end-51"
          >
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-text-230 MuiButton-textPrimary-231"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-229"
                >
                  Clear All
                </span>
                <span
                  class="MuiTouchRipple-root-374"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-32 MuiGrid-item-34"
            >
              <button
                class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-contained-236 MuiButton-containedPrimary-237"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-229"
                >
                  Apply Filters
                </span>
                <span
                  class="MuiTouchRipple-root-374"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`VaultSearchControl mobile renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root-4 makeStyles-paper-3 MuiPaper-elevation1-8 MuiPaper-rounded-5"
  >
    <div
      class="MuiGrid-root-32 MuiGrid-container-33"
    >
      <div
        class="MuiGrid-root-32 MuiGrid-item-34 MuiGrid-grid-xs-true-66"
      >
        <label
          class="MuiFormControlLabel-root-135"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-160 MuiIconButton-root-151 PrivateSwitchBase-root-147 MuiCheckbox-root-141 MuiCheckbox-colorPrimary-145 MuiIconButton-colorPrimary-155"
          >
            <span
              class="MuiIconButton-label-159"
            >
              <input
                class="PrivateSwitchBase-input-150"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-163"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-374"
            />
          </span>
          <span
            class="MuiTypography-root-172 MuiFormControlLabel-label-140 MuiTypography-body1-174"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173"
            >
              Only show deposits
            </p>
          </span>
        </label>
      </div>
      <div
        class="MuiGrid-root-32 MuiGrid-container-33 MuiGrid-item-34 MuiGrid-justify-content-xs-flex-end-51 MuiGrid-grid-xs-true-66"
      >
        <button
          class="MuiButtonBase-root-160 MuiButton-root-228 MuiButton-text-230 makeStyles-button-372"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-229 makeStyles-buttonLabel-373"
          >
            <p
              class="MuiTypography-root-172 MuiTypography-body2-173 MuiTypography-displayInline-200"
            >
              Filters
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-163"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-374"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
